traffic_to_catalog.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: catalog-allow-prod
spec:
  podSelector:
    matchLabels:
      app: catalog
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
