traffic_to_customer.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: customer-allow-prod
spec:
  podSelector:
    matchLabels:
      app: customer
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
